# RemoteRunnerd

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  build_ci.sh  remote-runnerd.conf
.github/workflows/: ccpp.yml
src/: Configuration.cpp  Configuration.hpp  InstructionProcessor.cpp  InstructionProcessor.h  Permissions.cpp  Permissions.hpp  RemoteRunnerd.cpp  TaskRunner.cpp  TaskRunner.h
src/Communication/: Server.cpp  Server.hpp  Session.cpp  Session.hpp
src/Endpoint/: EndpointFactory.cpp  EndpointFactory.hpp  IEndpoint.hpp  Protocol.hpp  TCPEndpoint.cpp  TCPEndpoint.hpp  UDSEndpoint.cpp  UDSEndpoint.hpp
src/Messaging/: ZMQServer.cpp  ZMQServer.h
src/Task/: RemoteTask.cpp  RemoteTask.hpp  TaskRunner.cpp  TaskRunner.hpp
src/Utils/: TextProcessing.cpp  TextProcessing.hpp  Utils.hpp
